# ML-Library

./: CMakeLists.txt  README.md
data/: predict.csv  test_input.csv
include/ml/: linearRegression.hpp  utils.hpp
output/: test_file.csv  test_output1.csv  test_output2.csv
src/: linearRegression.cpp  utils.cpp
training_examples/: linear_reg1.cpp  linear_reg2.cpp  read_csv.cpp
